--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,9 +18,9 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -47,16 +44,20 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
+
+                    <div class="keeprice-logo page-scroll">
+                    <img class="img-responsive page-scroll " src="img/keeprice_icon.png" alt="">
                     <a class="navbar-brand page-scroll" href="#page-top">Keeprice</a>
+                    </div>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="hidden">
+                        <li class="hidden active">
                             <a href="#page-top"></a>
                         </li>
-                        <li>
+                        <li class="">
                             <a class="page-scroll" href="#services">Services</a>
                         </li>
                         <li>
@@ -68,7 +69,7 @@
                         <li>
                             <a class="page-scroll" href="#team">Team</a>
                         </li>
-                        <li>
+                        <li class="">
                             <a class="page-scroll" href="#contact">Contact</a>
                         </li>
                     </ul>
@@ -80,14 +81,23 @@
 
         <!-- Header -->
         <header>
+
             <div class="container">
+                <div class="col-lg-4 col-sm-4">
+                 <div class="intro-text">
+                <img class="img-responsive intro-leading phone" src="img/iphone.png" alt="">
+                </div>
+                </div>
+                <div class="col-lg-8 col-sm-8">
                 <div class="intro-text">
-                    <div class="intro-lead-in">Welcome To Keeprice!</div>
-                    <div class="intro-heading">It's Nice To Meet You</div>
+
+                    <div class="intro-lead-in">那些生活中的小事，Keeprice幫你記得。</div>
+                    <div class="intro-heading">簡單、快速的計算單價，讓你不再買貴、不再為了忘記買多少錢而苦惱。</div>
                     <a href="#services" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
                     </a>
 
+                </div>
                 </div>
 
             </div>
@@ -118,7 +128,7 @@
 
         <!-- Page Content -->
         <section id="services">
-            <a  name="services"></a>
+            <a name="services"></a>
             <div class="content-section-a">
 
                 <div class="container">
@@ -127,9 +137,9 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">即時比價</h2>
-                            <p class="lead"><span style="color:#00caca">價格計算機&nbsp; &nbsp; </span><blank>輕鬆計算商品之最小單位價格。</p>
-                            <p class="lead"><span style="color:#00caca">掃描商品條碼&nbsp; &nbsp; </span><blank>帶出以往輸入過的同商品資訊。</p>
-                            <p class="lead"><span style="color:#00caca">快速比價清單&nbsp; &nbsp; </span><blank>一鍵操作比較同類型之不同商品價格。</p>
+                            <p class="lead"><span style="color:#00caca">價格計算機&nbsp; &nbsp; </span><blank>輕鬆計算商品之最小單位價格。</blank></p>
+                            <p class="lead"><span style="color:#00caca">掃描商品條碼&nbsp; &nbsp; </span><blank>帶出以往輸入過的同商品資訊。</blank></p>
+                            <p class="lead"><span style="color:#00caca">快速比價清單&nbsp; &nbsp; </span><blank>一鍵操作比較同類型之不同商品價格。</blank></p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/price_parity.png" alt="">
@@ -187,7 +197,7 @@
             <!-- /.content-section-a -->
         </section>
 
-        <a  name="contact"></a>
+        <a name="contact"></a>
 
 
         <section id="experience">
@@ -195,7 +205,7 @@
          <div class="container">
           <div class="row">
             <div class="col-md-4">
-                <span  style="text-align:center;"> 
+                <span style="text-align:center;"> 
                     <img class="img-responsive" src="img/keeprice_doll01_left.png" alt="">
                 </span>
             </div>
@@ -309,7 +319,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <form name="sentMessage" id="contactForm" novalidate>
+                <form name="sentMessage" id="contactForm" novalidate="">
                     <div class="row">
                         <div class="col-md-4">
 
@@ -325,15 +335,15 @@
                      <div class="col-md-8">
                         <h3 class="section-heading">歡迎體驗新時代的比價服務，請先留下你的資料，我們將於服務上線時讓您搶先體驗。</h3>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                            <input type="text" class="form-control" placeholder="Your Name *" id="name" required="" data-validation-required-message="Please enter your name.">
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                            <input type="email" class="form-control" placeholder="Your Email *" id="email" required="" data-validation-required-message="Please enter your email address.">
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
-                            <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                            <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required="" data-validation-required-message="Please enter your phone number.">
                             <p class="help-block text-danger"></p>
                         </div>
 
@@ -346,7 +356,7 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">立即體驗</button>
+                                <button type="submit" class="btn btn-xl">馬上註冊</button>
                             </div>
                         </div>
                     </form>
@@ -359,7 +369,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2014</span>
+                    <span class="copyright">Copyright © Your Website 2014</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -571,6 +581,7 @@
         <!-- Custom Theme JavaScript -->
         <script src="js/agency.js"></script>
 
-    </body>
+    
 
-    </html>
+    
+</body></html>
