調整navbar顏色，文案修正，整體畫面修正(蒐集email表單除外)。

--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
                         <li class="hidden active">
                             <a href="#page-top"></a>
                         </li>
-                        <li class="">
+                        <!--<li class="">
                             <a class="page-scroll" href="#services">Services</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        </li>-->
+                        <li>
+                            <a class="page-scroll" href="#about">我們提供</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#about">About</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="#team">Team</a>
+                            <a class="page-scroll" href="#team">如何使用</a>
                         </li>
                         <li class="">
-                            <a class="page-scroll" href="#contact">Contact</a>
+                            <a class="page-scroll" href="#contact">立即體驗</a>
                         </li>
                     </ul>
                 </div>
@@ -85,7 +85,7 @@
             <div class="container">
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
-                <img class="img-responsive intro-leading phone" src="img/iphone.png" alt="">
+                <img class="img-responsive intro-leading" src="img/iphone.png" alt="">
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
@@ -137,9 +137,9 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">即時比價</h2>
-                            <p class="lead"><span style="color:#00caca">價格計算機&nbsp; &nbsp; </span><blank>輕鬆計算商品之最小單位價格。</blank></p>
-                            <p class="lead"><span style="color:#00caca">掃描商品條碼&nbsp; &nbsp; </span><blank>帶出以往輸入過的同商品資訊。</blank></p>
-                            <p class="lead"><span style="color:#00caca">快速比價清單&nbsp; &nbsp; </span><blank>一鍵操作比較同類型之不同商品價格。</blank></p>
+                            <p class="lead"><span style="color:#00caca">價格計算機&nbsp; &nbsp; </spa即時n><blank>輕鬆計算商品之最小單位價格。</p>
+                            <p class="lead"><span style="color:#00caca">掃描商品條碼&nbsp; &nbsp; </span>帶出以往輸入過的同商品資訊。</p>
+                            <p class="lead"><span style="color:#00caca">快速比價清單&nbsp; &nbsp; </span>一鍵操作比較同類型之不同商品價格。</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/price_parity.png" alt="">
@@ -155,13 +155,12 @@
             <div class="content-section-b">
 
                 <div class="container">
-
                     <div class="row">
                         <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                            <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                            <h2 class="section-heading">記錄消費</h2>
+                            <p class="lead"><span style="line-height:50px">總是想不起以往買過的便宜價格？<br>Keeprice幫你記得每一筆消費，讓你不再為此煩惱。<span></p>
                         </div>
                         <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                             <img class="img-responsive" src="img/recoed_consumption.png" alt="">
@@ -182,8 +181,10 @@
                         <div class="col-lg-5 col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                            <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                            <h2 class="section-heading">資訊共享</h2>
+                            <p class="lead"><span style="line-height:50px">懶得自己key in資料嗎？<br>那就和親友共享資料吧！<br>
+
+                            為彼此荷包省下更多時間。</span></p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/share_information.png" alt="">
@@ -209,8 +210,8 @@
                     <img class="img-responsive" src="img/keeprice_doll01_left.png" alt="">
                 </span>
             </div>
-            <div class="col-md-4" style="text-align: center; ">
-                <span style="font-family:'PingFang-TC'; font-size: 22px">隨時隨地計算商品單價，<br>與親友分享最新的價格資訊，<br>加入Keeprice，你可以盡情放心的消費。</span>
+            <div class="col-md-4" style="text-align: center; margin-top: 30px ">
+                <span style="font-family:'PingFang-TC','Droid Serif','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size: 19px">隨時隨地計算商品單價，<br>與親友分享最新的價格資訊，<br>加入Keeprice，你可以盡情放心的消費。</span>
                 <!-- <button href="#contact" class="btn btn-xl">Send Message</button> -->
                 <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">立即體驗</a>
             </div>
@@ -246,7 +247,7 @@
 
 
 
-<div class="banner">
+<!--<div class="banner">
 
     <div class="container">
 
@@ -269,7 +270,7 @@
             </div>
         </div>
 
-    </div>
+    </div>-->
     <!-- /.container -->
 
 </div>
