把inline的html改寫進css

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">即時比價</h2>
-                            <p class="lead"><span style="color:#00caca">價格計算機&nbsp; &nbsp; </spa即時n><blank>輕鬆計算商品之最小單位價格。</p>
-                            <p class="lead"><span style="color:#00caca">掃描商品條碼&nbsp; &nbsp; </span>帶出以往輸入過的同商品資訊。</p>
-                            <p class="lead"><span style="color:#00caca">快速比價清單&nbsp; &nbsp; </span>一鍵操作比較同類型之不同商品價格。</p>
+                            <p class="lead"><span style="color:#00caca">價格計算機&nbsp; &nbsp; </span><blank>輕鬆計算商品之最小單位價格。<br>
+                            <span style="color:#00caca">掃描商品條碼&nbsp; &nbsp; </span>帶出以往輸入過的同商品資訊。<br>
+                            <span style="color:#00caca">快速比價清單&nbsp; &nbsp; </span>一鍵操作比較同類型之不同商品價格。</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/price_parity.png" alt="">
@@ -160,7 +160,8 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">記錄消費</h2>
-                            <p class="lead"><span style="line-height:50px">總是想不起以往買過的便宜價格？<br>Keeprice幫你記得每一筆消費，讓你不再為此煩惱。<span></p>
+                            <p class="lead">
+                            總是想不起以往買過的便宜價格？<br>Keeprice幫你記得每一筆消費，讓你不再為此煩惱。<span></p>
                         </div>
                         <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                             <img class="img-responsive" src="img/recoed_consumption.png" alt="">
@@ -182,9 +183,7 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">資訊共享</h2>
-                            <p class="lead"><span style="line-height:50px">懶得自己key in資料嗎？<br>那就和親友共享資料吧！<br>
-
-                            為彼此荷包省下更多時間。</span></p>
+                            <p class="lead">懶得自己key in資料嗎？<br>那就和親友共享資料吧！<br>為彼此荷包省下更多時間。</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/share_information.png" alt="">
@@ -204,7 +203,7 @@
         <section id="experience">
 
          <div class="container">
-          <div class="row">
+          <div class="row content-wrapper">
             <div class="col-md-4">
                 <span style="text-align:center;"> 
                     <img class="img-responsive" src="img/keeprice_doll01_left.png" alt="">
