--- a/index.html
+++ b/index.html
@@ -206,11 +206,13 @@
           <div class="row content-wrapper">
             <div class="col-md-4">
                 <span style="text-align:center;"> 
+                    <div class="doll-left">
                     <img class="img-responsive" src="img/keeprice_doll01_left.png" alt="">
+                    </div>
                 </span>
             </div>
             <div class="col-md-4" style="text-align: center; margin-top: 30px ">
-                <span style="font-family:'PingFang-TC','Droid Serif','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size: 19px">隨時隨地計算商品單價，<br>與親友分享最新的價格資訊，<br>加入Keeprice，你可以盡情放心的消費。</span>
+                <span style="font-family:'PingFang-TC','Droid Serif','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size: 19px">隨時隨地計算商品單價，<br>與親友分享最新的價格資訊，<br>加入Keeprice，你可以放心盡情的消費。</span>
                 <!-- <button href="#contact" class="btn btn-xl">Send Message</button> -->
                 <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">立即體驗</a>
             </div>
@@ -320,7 +322,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <form name="sentMessage" id="contactForm" novalidate="">
-                    <div class="row">
+                    <div class="row register-form">
                         <div class="col-md-4">
 
                          <img class="img-responsive" src="img/keeprice_logo.png" alt="">  
