--- a/index.html
+++ b/index.html
@@ -316,56 +316,48 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                
+
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <form name="sentMessage" id="contactForm" novalidate="">
-                    <div class="row register-form">
-                        <div class="col-md-4">
+                <div class="col-md-4">
 
-                         <img class="img-responsive" src="img/keeprice_logo.png" alt="">  
-                         
+                   <img class="img-responsive" src="img/keeprice_logo.png" alt="">  
+                   </div>
 
-
-
-
-
-
-                     </div>
-                     <div class="col-md-8">
-                        <h3 class="section-heading">歡迎體驗新時代的比價服務，請先留下你的資料，我們將於服務上線時讓您搶先體驗。</h3>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Your Name *" id="name" required="" data-validation-required-message="Please enter your name.">
-                            <p class="help-block text-danger"></p>
+             <div class="col-md-8">
+             <div id="mc_embed_signup">
+                <form action="//iiwa-design.us13.list-manage.com/subscribe/post?u=6dfcd558b0dd158652f74d42e&amp;id=28b5cf335c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+                        <h2>歡迎體驗新時代的比價服務，請留下您的資料，我們將於服務上線時讓您搶先體驗。</h2>
+                        <div class="mc-field-group">
+                            <label for="mce-EMAIL">Email Address </label>
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
                         </div>
-                        <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Your Email *" id="email" required="" data-validation-required-message="Please enter your email address.">
-                            <p class="help-block text-danger"></p>
+                        <div class="mc-field-group">
+                            <label for="mce-FNAME">First Name </label>
+                            <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
                         </div>
-                        <div class="form-group">
-                            <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required="" data-validation-required-message="Please enter your phone number.">
-                            <p class="help-block text-danger"></p>
+                        <div class="mc-field-group">
+                            <label for="mce-LNAME">Last Name </label>
+                            <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
                         </div>
-
-
-                                <!--<div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>-->
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">馬上註冊</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+                        <div id="mce-responses" class="clear">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6dfcd558b0dd158652f74d42e_28b5cf335c" tabindex="-1" value=""></div>
+                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                    </div>
+                </form>
             </div>
+            </div>
+
         </div>
-    </section>
+    </div>
+</div>
+</section>
 
     <footer>
         <div class="container">
