--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <div class="keeprice-logo page-scroll">
+                    <div class="keeprice-icon page-scroll">
                     <img class="img-responsive page-scroll " src="img/keeprice_icon.png" alt="">
                     <a class="navbar-brand page-scroll" href="#page-top">Keeprice</a>
                     </div>
@@ -321,38 +321,42 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="col-md-4">
+                <form name="sentMessage" id="contactForm" novalidate="">
+                    <div class="row register-form">
+                        <div class="col-md-4">
 
-                   <img class="img-responsive" src="img/keeprice_logo.png" alt="">  
-                   </div>
+                           <img class="img-responsive" src="img/keeprice_logo.png" alt="">  
+                       </div>
 
-             <div class="col-md-8">
-             <div id="mc_embed_signup">
-                <form action="//iiwa-design.us13.list-manage.com/subscribe/post?u=6dfcd558b0dd158652f74d42e&amp;id=28b5cf335c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll">
-                        <h2>歡迎體驗新時代的比價服務，請留下您的資料，我們將於服務上線時讓您搶先體驗。</h2>
-                        <div class="mc-field-group">
-                            <label for="mce-EMAIL">Email Address </label>
-                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                        </div>
-                        <div class="mc-field-group">
-                            <label for="mce-FNAME">First Name </label>
-                            <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-                        </div>
-                        <div class="mc-field-group">
-                            <label for="mce-LNAME">Last Name </label>
-                            <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-                        </div>
-                        <div id="mce-responses" class="clear">
-                            <div class="response" id="mce-error-response" style="display:none"></div>
-                            <div class="response" id="mce-success-response" style="display:none"></div>
-                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6dfcd558b0dd158652f74d42e_28b5cf335c" tabindex="-1" value=""></div>
-                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                    </div>
-                </form>
-            </div>
-            </div>
+                       <div class="col-md-8">
+                         <div id="mc_embed_signup">
+                            <form action="//iiwa-design.us13.list-manage.com/subscribe/post?u=6dfcd558b0dd158652f74d42e&amp;id=28b5cf335c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                <div id="mc_embed_signup_scroll">
+                                    <h3 class="section-heading">歡迎體驗新時代的比價服務，請留下您的資料，我們將於服務上線時讓您搶先體驗。</h3>
+                                    <div class="form-group">
+                                        <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address" data-validation-required-message="Please enter your Email.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="First Name" data-validation-required-message="Please enter your Frist Name.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" placeholder="Last Name" data-validation-required-message="Please enter your Last Name.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                    <div id="mce-responses" class="clearfix">
+                                     <div id="success"></div>
+                                     <div class="response" id="mce-error-response" style="display:none"></div>
+                                     <div class="response" id="mce-success-response" style="display:none"></div>    
+                                 </div>
+                             </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6dfcd558b0dd158652f74d42e_28b5cf335c" tabindex="-1" value=""></div>
+                             <div class="clearfix"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn-xl"></div>
+                         </div>
+                     </form>
+                 </div>
+             </div>
 
         </div>
     </div>
