註冊頁修正

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en"><head>
+logo<html lang="en"><head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -325,7 +325,7 @@
                     <div class="row register-form">
                         <div class="col-md-4">
 
-                           <img class="img-responsive" src="img/keeprice_logo.png" alt="">  
+                           <img class="img-responsive keeprice-logo" src="img/keeprice_logo.png" alt="">  
                        </div>
 
                        <div class="col-md-8">
@@ -352,7 +352,7 @@
                                  </div>
                              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6dfcd558b0dd158652f74d42e_28b5cf335c" tabindex="-1" value=""></div>
-                             <div class="clearfix"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn-xl"></div>
+                             <div class="clearfix"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn-xl btn-xl-full"></div>
                          </div>
                      </form>
                  </div>
