註冊頁修正(正確版)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-logo<html lang="en"><head>
+<html lang="en"><head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
