--- a/index.html
+++ b/index.html
@@ -321,7 +321,6 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <form name="sentMessage" id="contactForm" novalidate="">
                     <div class="row register-form">
                         <div class="col-md-4">
 
@@ -345,8 +344,7 @@
                                         <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" placeholder="Last Name" data-validation-required-message="Please enter your Last Name.">
                                         <p class="help-block text-danger"></p>
                                     </div>
-                                    <div id="mce-responses" class="clearfix">
-                                     <div id="success"></div>
+                                    <div id="mce-responses" class="clear">
                                      <div class="response" id="mce-error-response" style="display:none"></div>
                                      <div class="response" id="mce-success-response" style="display:none"></div>    
                                  </div>
@@ -574,7 +572,7 @@
 
         <!-- Contact Form JavaScript -->
         <script src="js/jqBootstrapValidation.js"></script>
-        <script src="js/contact_me.js"></script>
+        <!-- <script src="js/contact_me.js"></script> -->
 
         <!-- Custom Theme JavaScript -->
         <script src="js/agency.js"></script>
