加入語言選單及顏色切換(尚無法切換語言) 下拉選單背景色待修正 註冊表單已完成 尚缺mailchimp設定

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <img class="img-responsive page-scroll " src="img/keeprice_icon.png" alt="">
                     <a class="navbar-brand page-scroll" href="#page-top">Keeprice</a>
                     </div>
+
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,6 +58,22 @@
                         <li class="hidden active">
                             <a href="#page-top"></a>
                         </li>
+
+
+                        <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Premium Bootstrap Themes &amp; Templates" aria-expanded="false"><i class="fa fa-star text-yellow"></i> 語言 <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown-list">
+                                <a href="/bootstrap-design-services"><img src="img/flag/taiwan.png">中文(繁體)</a>
+                            </li>
+                            <li>
+                                <a href="https://wrapbootstrap.com/?ref=StartBootstrap"><img src="img/flag/china.png">中文(簡體)</a>
+                            </li>
+                            <li>
+                                <a href="/bootstrap-design-services"><img src="img/flag/usa.png">English</a>
+                            </li>
+                        </ul>
+                    </li>
                         <!--<li class="">
                             <a class="page-scroll" href="#services">Services</a>
                         </li>
