語言下拉選單顏色修正

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Premium Bootstrap Themes &amp; Templates" aria-expanded="false"><i class="fa fa-star text-yellow"></i> 語言 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-list">
-                                <a href="/bootstrap-design-services"><img src="img/flag/taiwan.png">中文(繁體)</a>
+                                <a href="/bootstrap-design-services"><img src="img/flag/taiwan.png">  中文(繁體)</a>
                             </li>
-                            <li>
-                                <a href="https://wrapbootstrap.com/?ref=StartBootstrap"><img src="img/flag/china.png">中文(簡體)</a>
+                            <li class="dropdown-list">
+                                <a href="https://wrapbootstrap.com/?ref=StartBootstrap"><img src="img/flag/china.png">  中文(簡體)</a>
                             </li>
-                            <li>
-                                <a href="/bootstrap-design-services"><img src="img/flag/usa.png">English</a>
+                            <li class="dropdown-list">
+                                <a href="/bootstrap-design-services"><img src="img/flag/usa.png">   English</a>
                             </li>
                         </ul>
                     </li>
