--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     </button>
 
                     <div class="keeprice-icon page-scroll">
-                    <img class="img-responsive page-scroll " src="img/keeprice_icon.png" alt="">
-                    <a class="navbar-brand page-scroll" href="#page-top">Keeprice</a>
+                        <img class="img-responsive page-scroll " src="img/keeprice_icon.png" alt="">
+                        <a class="navbar-brand page-scroll" href="#page-top">Keeprice</a>
                     </div>
 
                 </div>
@@ -61,19 +61,20 @@
 
 
                         <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Premium Bootstrap Themes &amp; Templates" aria-expanded="false"><i class="fa fa-star text-yellow"></i> 語言 <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li class="dropdown-list">
-                                <a href="/bootstrap-design-services"><img src="img/flag/taiwan.png">  中文(繁體)</a>
-                            </li>
-                            <li class="dropdown-list">
-                                <a href="https://wrapbootstrap.com/?ref=StartBootstrap"><img src="img/flag/china.png">  中文(簡體)</a>
-                            </li>
-                            <li class="dropdown-list">
-                                <a href="/bootstrap-design-services"><img src="img/flag/usa.png">   English</a>
-                            </li>
-                        </ul>
-                    </li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-star text-yellow"></i> 語言 <b class="caret"></b></a>
+
+                            <ul class="dropdown-menu">
+                                <li class="dropdown-list">
+                                    <a href="/bootstrap-design-services"><img src="img/flag/taiwan.png">  中文(繁體)</a>
+                                </li>
+                                <li class="dropdown-list">
+                                    <a href="https://wrapbootstrap.com/?ref=StartBootstrap"><img src="img/flag/china.png">  中文(簡體)</a>
+                                </li>
+                                <li class="dropdown-list">
+                                    <a href="/bootstrap-design-services"><img src="img/flag/usa.png">   English</a>
+                                </li>
+                            </ul>
+                        </li>
                         <!--<li class="">
                             <a class="page-scroll" href="#services">Services</a>
                         </li>
