--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Keeprice</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -82,7 +82,7 @@
                             <a class="page-scroll" href="#portfolio">Portfolio</a>
                         </li>-->
                         <li>
-                            <a class="page-scroll" href="#about">我們提供</a>
+                            <a class="page-scroll" href="#services">我們提供</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="#team">如何使用</a>
@@ -383,15 +383,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright © Your Website 2014</span>
+                    <span class="copyright">Copyright © IIWA-Design All Right Reserved</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a target="_blank" href="http://www.facebook.com/keepriceapp/?fref=ts"><i class="fa fa-facebook"></i></a>
                         </li>
                     </ul>
                 </div>
