--- a/index.en.html
+++ b/index.en.html
@@ -71,7 +71,7 @@
                                     <a href="https://wrapbootstrap.com/?ref=StartBootstrap"><img src="img/flag/china.png">  中文(簡體)</a>
                                 </li>
                                 <li class="dropdown-list">
-                                    <a href="index.en.html"><img src="img/flag/usa.png">   English</a>
+                                    <a href="/bootstrap-design-services"><img src="img/flag/usa.png">   English</a>
                                 </li>
                             </ul>
                         </li>
@@ -109,7 +109,7 @@
                 <div class="col-lg-8 col-sm-8">
                 <div class="intro-text">
 
-                    <div class="intro-lead-in">那些生活中的小事，Keeprice幫你記得。</div>
+                    <div class="intro-lead-in">English Test</div>
                     <div class="intro-heading">簡單、快速的計算單價，讓你不再買貴、不再為了忘記買多少錢而苦惱。</div>
                     <a href="#services" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
@@ -219,9 +219,9 @@
 
 
         <section id="experience">
-        <div class="content-wrapper">
+
          <div class="container">
-          <div class="row">
+          <div class="row content-wrapper">
             <div class="col-md-4">
                 <span style="text-align:center;"> 
                     <div class="doll-left">
@@ -331,7 +331,6 @@
 
 <!-- Contact Section -->
 <section id="contact">
-<div class="content-contact">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -378,14 +377,13 @@
         </div>
     </div>
 </div>
-</div>
 </section>
 
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright © <a target="_blank" href="http://www.iiwa-design.com">IIWA-Design</a> All Right Reserved</span>
+                    <span class="copyright">Copyright © IIWA-Design All Right Reserved</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
