--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="container">
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
-                <img class="img-responsive intro-leading" src="img/iphone.png" alt="">
+                <img class="img-responsive intro-leading iphone" src="img/iphone.png" alt="">
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
@@ -352,15 +352,15 @@
                                 <div id="mc_embed_signup_scroll">
                                     <h3 class="section-heading">歡迎體驗新時代的比價服務，請留下您的資料，我們將於服務上線時讓您搶先體驗。</h3>
                                     <div class="form-group">
-                                        <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address" data-validation-required-message="Please enter your Email.">
+                                        <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="電子信箱" data-validation-required-message="請輸入您的電子信箱 Please enter your Email.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="First Name" data-validation-required-message="Please enter your Frist Name.">
+                                        <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="名字" data-validation-required-message="Please enter your Frist Name.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" placeholder="Last Name" data-validation-required-message="Please enter your Last Name.">
+                                        <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" placeholder="姓氏" data-validation-required-message="Please enter your Last Name.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div id="mce-responses" class="clear">
@@ -369,7 +369,9 @@
                                  </div>
                              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6dfcd558b0dd158652f74d42e_28b5cf335c" tabindex="-1" value=""></div>
-                             <div class="clearfix"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn-xl btn-xl-full"></div>
+                             <div class="clearfix"><input type="submit" value="訂閱最新消息" name="subscribe" id="mc-embedded-subscribe" class="btn-xl btn-xl-full"></div>
+                             <p class="section-footing">您提供的個人資料僅供Keeprice蒐集、管理與服務等需要。我們絕對不會任意出售、交換、出租或以其他變相之方式，將您的個人資料揭露與其他團體或個人。</p>
+
                          </div>
                      </form>
                  </div>
