fixed: flags of nation not display in real server issue

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 
                             <ul class="dropdown-menu">
                                 <li class="dropdown-list">
-                                    <a href="/bootstrap-design-services"><img src="img/flag/taiwan.png">  中文(繁體)</a>
+                                    <a href="/bootstrap-design-services"><img src="img/flag/Taiwan.png">  中文(繁體)</a>
                                 </li>
                                 <li class="dropdown-list">
-                                    <a href="https://wrapbootstrap.com/?ref=StartBootstrap"><img src="img/flag/china.png">  中文(簡體)</a>
+                                    <a href="https://wrapbootstrap.com/?ref=StartBootstrap"><img src="img/flag/China.png">  中文(簡體)</a>
                                 </li>
                                 <li class="dropdown-list">
-                                    <a href="index.en.html"><img src="img/flag/usa.png">   English</a>
+                                    <a href="index.en.html"><img src="img/flag/USA.png">   English</a>
                                 </li>
                             </ul>
                         </li>
