多國語言版本--新增 英文/簡中 (英文文字及間距微調)

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 
                             <ul class="dropdown-menu">
                                 <li class="dropdown-list">
-                                    <a href="/bootstrap-design-services"><img src="img/flag/Taiwan.png">  中文(繁體)</a>
+                                    <a href="index.html"><img src="img/flag/Taiwan.png">  中文(繁體)</a>
                                 </li>
                                 <li class="dropdown-list">
-                                    <a href="https://wrapbootstrap.com/?ref=StartBootstrap"><img src="img/flag/China.png">  中文(簡體)</a>
+                                    <a href="index.cn.html"><img src="img/flag/China.png">  中文(简体)</a>
                                 </li>
                                 <li class="dropdown-list">
                                     <a href="index.en.html"><img src="img/flag/USA.png">   English</a>
@@ -155,7 +155,7 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">即時比價</h2>
-                            <p class="lead"><span style="color:#00caca">價格計算機&nbsp; &nbsp; </span><blank>輕鬆計算商品之最小單位價格。<br>
+                            <p class="lead"><span style="color:#00caca">價格計算機&nbsp; &nbsp; </span><blank>輕鬆計算商品的最小單位價格。<br>
                             <span style="color:#00caca">掃描商品條碼&nbsp; &nbsp; </span>帶出以往輸入過的同商品資訊。<br>
                             <span style="color:#00caca">快速比價清單&nbsp; &nbsp; </span>一鍵操作比較同類型之不同商品價格。</p>
                         </div>
@@ -201,7 +201,7 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">資訊共享</h2>
-                            <p class="lead">懶得自己key in資料嗎？<br>那就和親友共享資料吧！<br>為彼此荷包省下更多時間。</p>
+                            <p class="lead">懶得自己輸入每一筆商品資料嗎？<br>那就和親友一起共享Keeprice的價格記錄吧！<br>讓彼此為彼此省下更多荷包和打字時間。</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/share_information.png" alt="">
@@ -370,7 +370,7 @@
                              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6dfcd558b0dd158652f74d42e_28b5cf335c" tabindex="-1" value=""></div>
                              <div class="clearfix"><input type="submit" value="訂閱最新消息" name="subscribe" id="mc-embedded-subscribe" class="btn-xl btn-xl-full"></div>
-                             <p class="section-footing">您提供的個人資料僅供Keeprice蒐集、管理與服務等需要。我們絕對不會任意出售、交換、出租或以其他變相之方式，將您的個人資料揭露與其他團體或個人。</p>
+                             <p class="section-footing">我們不會發送廣告信至您的信箱。</p>
 
                          </div>
                      </form>
