--- a/index.cn.html
+++ b/index.cn.html
@@ -61,17 +61,17 @@
 
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-star text-yellow"></i> Language <b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-star text-yellow"></i> 语言 <b class="caret"></b></a>
 
                             <ul class="dropdown-menu">
                                 <li class="dropdown-list">
-                                    <a href="index.html"><img src="img/flag/taiwan.png">  中文(繁體)</a>
+                                    <a href="index.html"><img src="img/flag/Taiwan.png">  中文(繁體)</a>
                                 </li>
                                 <li class="dropdown-list">
-                                    <a href="index.cn.html"><img src="img/flag/china.png">  中文(简体)</a>
+                                    <a href="index.cn.html"><img src="img/flag/China.png">  中文(简体)</a>
                                 </li>
                                 <li class="dropdown-list">
-                                    <a href="index.en.html"><img src="img/flag/usa.png">   English</a>
+                                    <a href="index.en.html"><img src="img/flag/USA.png">   English</a>
                                 </li>
                             </ul>
                         </li>
@@ -82,13 +82,13 @@
                             <a class="page-scroll" href="#portfolio">Portfolio</a>
                         </li>-->
                         <li>
-                            <a class="page-scroll" href="#services">Offers</a>
+                            <a class="page-scroll" href="#services">我们提供</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#team">Instructions</a>
+                            <a class="page-scroll" href="#team">如何使用</a>
                         </li>
                         <li class="">
-                            <a class="page-scroll" href="#contact">Reservation</a>
+                            <a class="page-scroll" href="#contact">立即体验</a>
                         </li>
                     </ul>
                 </div>
@@ -103,14 +103,14 @@
             <div class="container">
                 <div class="col-lg-4 col-sm-4">
                  <div class="intro-text">
-                <img class="img-responsive intro-leading" src="img/iphone.png" alt="">
+                <img class="img-responsive intro-leading iphone" src="img/iphone.png" alt="">
                 </div>
                 </div>
                 <div class="col-lg-8 col-sm-8">
                 <div class="intro-text">
 
-                    <div class="intro-lead-in">Those little things , Keeprice remember.</div>
-                    <div class="intro-heading">Simply calculate unit price , so you do not worry about forgetting how much you spend or overcharged.</div>
+                    <div class="intro-lead-in">那些生活中的小事，Keeprice帮你记得。</div>
+                    <div class="intro-heading">简单、快速的计算单价，让你不再买贵、不再为了忘记买多少钱而苦恼。</div>
                     <a href="#services" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
                     </a>
@@ -121,7 +121,7 @@
             </div>
         </header>
 
-        
+
 
 
 
@@ -154,10 +154,11 @@
                         <div class="col-lg-5 col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">INSTANT COMPARE PRICES</h2>
-                            <p class="lead"><span style="color:#00caca;font-weight:600">Price Calculator&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Simply calculate the minimum unit price of the products.</span><br>
-                            <span style="color:#00caca;font-weight:600">Scan Barcode&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">Bring out of the data of the same product you entered.</span><br>
-                            <span style="color:#00caca;font-weight:600">Price Parity List&nbsp; &nbsp; </span><br><span style="font-size:17px;line-height:30px">One button to compare the different type of products.</span></p>
+                            <h2 class="section-heading">即时比价</h2>
+                            <p class="lead"><span style="color:#00caca">价格计算机&nbsp; &nbsp; </span><blank>轻松计算商品的最小单位价格。<br>
+                            <span style="color:#00caca">扫描商品条码&nbsp; &nbsp; </span>带出以往输入过的同商品资讯。<br>
+                            <span style="color:#00caca">快速比价清单&nbsp; &nbsp; </span>
+                        一键操作比较同类型之不同商品价格。</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/price_parity.png" alt="">
@@ -177,9 +178,9 @@
                         <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">Record Consumption</h2>
+                            <h2 class="section-heading">记录消费</h2>
                             <p class="lead">
-                            Always forgetting the best price ?<br>Keeprice record your every concumption , so you do not worry about the price anymore.<span></p>
+                            总是想不起以往买过的便宜价格？<br>Keeprice帮你记得每一笔消费，让你不再为此烦恼。<span></p>
                         </div>
                         <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                             <img class="img-responsive" src="img/recoed_consumption.png" alt="">
@@ -200,8 +201,8 @@
                         <div class="col-lg-5 col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">Share Data</h2>
-                            <p class="lead">Lazy to enter every data by your own?<br>Then share Keeprice data with your family and friends, Save both time and money!</p>
+                            <h2 class="section-heading">资讯共享</h2>
+                            <p class="lead">懒得自己输入每一笔商品资料吗？<br>那就和亲友一起共享KEEPRICE的价格记录吧！<br>让彼此为彼此省下更多荷包和打字时间。</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/share_information.png" alt="">
@@ -219,22 +220,22 @@
 
 
         <section id="experience">
-
+        <div class="content-wrapper">
          <div class="container">
-          <div class="row content-wrapper">
-            <div class="col-md-3">
-                <span style="text-align:center;"> 
+          <div class="row">
+            <div class="col-md-4">
+                <span style="text-align:center;">
                     <div class="doll-left">
                     <img class="img-responsive" src="img/keeprice_doll01_left.png" alt="">
                     </div>
                 </span>
             </div>
-            <div class="col-md-6" style="text-align: center; margin-top: 30px ">
-                <span style="font-family:'PingFang-TC','Droid Serif','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size:18px;line-height: 50px;">Record price anytime and anywhere.<br>Share the lastest price with friends.<br>Join Keeprice, you can shopping smarter.</span>
+            <div class="col-md-4" style="text-align: center; margin-top: 30px ">
+                <span style="font-family:'PingFang-TC','Droid Serif','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size: 19px">随时随地计算商品单价，<br>与亲友分享最新的价格资讯<br>加入Keeprice，你可以放心尽情的消费。</span>
                 <!-- <button href="#contact" class="btn btn-xl">Send Message</button> -->
-                <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">Reservation</a>
+                <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">立即体验</a>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <img class="img-responsive" src="img/keeprice_doll01_right.png" alt="">
             </div>
 
@@ -343,34 +344,35 @@
                     <div class="row register-form">
                         <div class="col-md-4">
 
-                           <img class="img-responsive keeprice-logo" src="img/keeprice_logo.png" alt="">  
+                           <img class="img-responsive keeprice-logo" src="img/keeprice_logo.png" alt="">
                        </div>
 
                        <div class="col-md-8">
                          <div id="mc_embed_signup">
                             <form action="//iiwa-design.us13.list-manage.com/subscribe/post?u=6dfcd558b0dd158652f74d42e&amp;id=28b5cf335c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div id="mc_embed_signup_scroll">
-                                    <h3 class="section-heading"><span style="font-size:20px">Welcome to Keeprice. Please leave your email, we will notify you when publish.</span></h3>
+                                    <h3 class="section-heading">欢迎体验新时代的比价服务，请留下您的资料，我们将于服务上线时让您抢先体验。</h3>
                                     <div class="form-group">
-                                        <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address" data-validation-required-message="Please enter your Email.">
+                                        <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="邮箱" data-validation-required-message="請輸入您的電子信箱 Please enter your Email.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="First Name" data-validation-required-message="Please enter your Frist Name.">
+                                        <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="名字" data-validation-required-message="Please enter your Frist Name.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" placeholder="Last Name" data-validation-required-message="Please enter your Last Name.">
+                                        <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" placeholder="姓氏" data-validation-required-message="Please enter your Last Name.">
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div id="mce-responses" class="clear">
                                      <div class="response" id="mce-error-response" style="display:none"></div>
-                                     <div class="response" id="mce-success-response" style="display:none"></div>    
+                                     <div class="response" id="mce-success-response" style="display:none"></div>
                                  </div>
                              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6dfcd558b0dd158652f74d42e_28b5cf335c" tabindex="-1" value=""></div>
-                             <div class="clearfix"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn-xl btn-xl-full"></div>
-                             <p class="section-footing">We will not spam you.</p>
+                             <div class="clearfix"><input type="submit" value="订阅最新消息" name="subscribe" id="mc-embedded-subscribe" class="btn-xl btn-xl-full"></div>
+                             <p class="section-footing">我们不会发送广告信至您的信箱。</p>
+
                          </div>
                      </form>
                  </div>
@@ -379,13 +381,14 @@
         </div>
     </div>
 </div>
+</div>
 </section>
 
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright © IIWA-Design All Right Reserved</span>
+                    <span class="copyright">Copyright © <a target="_blank" href="http://www.iiwa-design.com">IIWA-Design</a> All Right Reserved</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -593,10 +596,8 @@
         <!-- Custom Theme JavaScript -->
         <script src="js/agency.js"></script>
 
-    
 
- 
- <script type="text/javascript">CRISP_WEBSITE_ID = "ddb18395-06e9-4a61-b2d6-41564917e6f9";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+<script type="text/javascript">CRISP_WEBSITE_ID = "ddb18395-06e9-4a61-b2d6-41564917e6f9";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 
-   
+
 </body></html>
