og tags for en/cn page

--- a/index.cn.html
+++ b/index.cn.html
@@ -6,6 +6,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <meta property="og:title" content="Keeprice 管价格">
+    <meta property="og:description" content="那些生活中的小事，Keeprice帮你记得。">
+    <meta property="og:image" content="http://landing-page.keeprice-app.com/img/share_information.png">
+
     <title>Keeprice</title>
 
     <!-- Bootstrap Core CSS -->
