--- a/index.en.html
+++ b/index.en.html
@@ -6,6 +6,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <meta property="og:title" content="Keeprice">
+    <meta property="og:description" content="Those little things , Keeprice remember.">
+    <meta property="og:image" content="http://landing-page.keeprice-app.com/img/share_information.png">
+
     <title>Keeprice</title>
 
     <!-- Bootstrap Core CSS -->
@@ -74,7 +78,7 @@
                                 </li>
                             </ul>
                         </li>
-                        
+
                         <!--<li class="">
                             <a class="page-scroll" href="#services">Services</a>
                         </li>
