fixed <html lang tag

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en"><head>
+<html lang="zh-TW"><head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,10 @@
     <meta property="og:title" content="Keeprice 管價格">
     <meta property="og:description" content="那些生活中的小事，Keeprice幫你記得。">
     <meta property="og:image" content="http://landing-page.keeprice-app.com/img/share_information.png">
+    <meta property=”og:type” content”website”/>
+    <meta property=“og:language” content=”zh-TW”/>
+    <meta property=“fb:admins” content=“Keeprice”/>
+
 
 
 
