--- a/index.cn.html
+++ b/index.cn.html
@@ -1,4 +1,4 @@
-<html lang="en"><head>
+<html lang="cn"><head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
