multi-language alternate setting

--- a/index.cn.html
+++ b/index.cn.html
@@ -10,6 +10,11 @@
     <meta property="og:description" content="那些生活中的小事，Keeprice帮你记得。">
     <meta property="og:image" content="http://landing-page.keeprice-app.com/img/share_information.png">
 
+    <link rel="alternate" href="http://landing-page.keeprice-app.com/index.html" hreflang="zh-Hant" />
+    <link rel="alternate" href="http://landing-page.keeprice-app.com/index.cn.html" hreflang="zh-Hans" />
+    <link rel="alternate" href="http://landing-page.keeprice-app.com/index.en.html" hreflang="x-default" /
+
+
     <title>Keeprice</title>
 
     <!-- Bootstrap Core CSS -->
