--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <meta property=“og:language” content=”zh-TW”/>
     <meta property=“fb:admins” content=“Keeprice”/>
 
-
+    <link rel="alternate" href="http://landing-page.keeprice-app.com/index.html" hreflang="zh-Hant" />
+    <link rel="alternate" href="http://landing-page.keeprice-app.com/index.cn.html" hreflang="zh-Hans" />
+    <link rel="alternate" href="http://landing-page.keeprice-app.com/index.en.html" hreflang="x-default" /
 
 
     <title>Keeprice</title>
