--- a/index.cn.html
+++ b/index.cn.html
@@ -12,7 +12,7 @@
 
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.html" hreflang="zh-Hant" />
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.cn.html" hreflang="zh-Hans" />
-    <link rel="alternate" href="http://landing-page.keeprice-app.com/index.en.html" hreflang="x-default" /
+    <link rel="alternate" href="http://landing-page.keeprice-app.com/index.en.html" hreflang="x-default" />
 
 
     <title>Keeprice</title>
