sync pages for zh-Hant/zh-Hans/en

--- a/index.cn.html
+++ b/index.cn.html
@@ -9,13 +9,16 @@
     <meta property="og:title" content="Keeprice 管价格">
     <meta property="og:description" content="那些生活中的小事，Keeprice帮你记得。">
     <meta property="og:image" content="http://landing-page.keeprice-app.com/img/share_information.png">
+    <meta property=”og:type” content”website”/>
+    <meta property=“og:language” content=”zh-Hans”/>
+    <meta property=“fb:admins” content=“Keeprice-app”/>
 
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.html" hreflang="zh-Hant" />
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.cn.html" hreflang="zh-Hans" />
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.en.html" hreflang="x-default" />
 
 
-    <title>Keeprice</title>
+    <title>Keeprice 管价格</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
