--- a/index.en.html
+++ b/index.en.html
@@ -9,6 +9,9 @@
     <meta property="og:title" content="Keeprice">
     <meta property="og:description" content="Those little things , Keeprice remember.">
     <meta property="og:image" content="http://landing-page.keeprice-app.com/img/share_information.png">
+    <meta property=”og:type” content”website”/>
+    <meta property=“og:language” content=”en”/>
+    <meta property=“fb:admins” content=“Keeprice-app”/>
 
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.html" hreflang="zh-Hant" />
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.cn.html" hreflang="zh-Hans" />
