--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
-<html lang="zh-TW"><head>
+<html lang="zh-Hant"><head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="那些生活中的小事，Keeprice幫你記得。">
+    <meta name="keyword" content="keeprice, keeprice-app, 記錄價格, 比價">
     <meta name="author" content="">
 
     <meta property="og:title" content="Keeprice 管價格">
     <meta property="og:description" content="那些生活中的小事，Keeprice幫你記得。">
     <meta property="og:image" content="http://landing-page.keeprice-app.com/img/share_information.png">
     <meta property=”og:type” content”website”/>
-    <meta property=“og:language” content=”zh-TW”/>
-    <meta property=“fb:admins” content=“Keeprice”/>
+    <meta property=“og:language” content=”zh-Hant”/>
+    <meta property=“fb:admins” content=“Keeprice-app”/>
 
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.html" hreflang="zh-Hant" />
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.cn.html" hreflang="zh-Hans" />
     <link rel="alternate" href="http://landing-page.keeprice-app.com/index.en.html" hreflang="x-default" />
 
 
-    <title>Keeprice</title>
+    <title>Keeprice 管價格</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
